fix: resolve issue with submenu not displaying on mobile devices

--- a/src/css/common/outline/sidebar/mobile-sidebar.css
+++ b/src/css/common/outline/sidebar/mobile-sidebar.css
@@ -56,11 +56,14 @@
     width: 100%;
     height: 100%;
 
+    display: flex;
+    justify-content: center;
+
     & ul,
     & li {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       margin: 0;
     }
 
@@ -93,8 +96,6 @@
 
     & li {
       & ul {
-        margin: 10px 0;
-
         & li {
           padding: 5px 0;
 
@@ -106,8 +107,40 @@
       }
     }
 
-    & > ul {
-      margin-left: -2.5rem;
+    & .menu-root {
+      margin-left: 1em;
+
+      & .menu-item {
+        padding: 0;
+
+        & a {
+          &:hover {
+            &:after {
+              content: none;
+            }
+          }
+        }
+      }
+
+      & .sub-menu {
+        display: block;
+        position: static;
+        box-shadow: none;
+        padding: 0;
+        text-align: left;
+        margin-left: 1em;
+        animation: none;
+        transform: none;
+
+        &::before {
+          content: none;
+        }
+
+        & a {
+          color: #9cacc5;
+          padding: 5px 0;
+        }
+      }
     }
   }
 
@@ -124,10 +157,10 @@
 
     & p {
       text-align: center;
-      font-size: 0.875rem;
+      font-size: 0.9125em;
       color: #b0b0b0;
       width: 100%;
-      height: 1.25rem;
+      height: 1.25em;
     }
   }
 }
